# vk_solutions_template

./: CMakeLists.txt  main
src/c/: main.c
src/question_1/: main.cpp
